--- a/zookeeper-cluster/docker-compose.yml
+++ b/zookeeper-cluster/docker-compose.yml
@@ -2,37 +2,31 @@ version: '2'
 
 services:
   zookeeper1:
-    image: 'bitnami/zookeeper:latest'
+    image: 'bitnami/zookeeper:3.7'
     ports:
       - '2181'
       - '2888'
       - '3888'
-    # volumes:
-    #   - /path/to/zookeeper-persistence:/bitnami/zookeeper
     environment:
       - ALLOW_ANONYMOUS_LOGIN=yes
       - ZOO_SERVER_ID=1
       - ZOO_SERVERS=0.0.0.0:2888:3888,zookeeper2:2888:3888,zookeeper3:2888:3888
   zookeeper2:
-    image: 'bitnami/zookeeper:latest'
+    image: 'bitnami/zookeeper:3.7'
     ports:
       - '2181'
       - '2888'
       - '3888'
-    # volumes:
-    #   - /path/to/zookeeper-persistence:/bitnami/zookeeper
     environment:
       - ALLOW_ANONYMOUS_LOGIN=yes
       - ZOO_SERVER_ID=2
       - ZOO_SERVERS=zookeeper1:2888:3888,0.0.0.0:2888:3888,zookeeper3:2888:3888
   zookeeper3:
-    image: 'bitnami/zookeeper:latest'
+    image: 'bitnami/zookeeper:3.7'
     ports:
       - '2181'
       - '2888'
       - '3888'
-    # volumes:
-    #   - /path/to/zookeeper-persistence:/bitnami/zookeeper
     environment:
       - ALLOW_ANONYMOUS_LOGIN=yes
       - ZOO_SERVER_ID=3
