use yaml formatter

--- a/zookeeper_zoonavigator/docker-compose.yml
+++ b/zookeeper_zoonavigator/docker-compose.yml
@@ -1,8 +1,8 @@
-version: '2'
+version: "2"
 
 services:
   zookeeper:
-    image: 'zookeeper:3.5.9'
+    image: "zookeeper:3.5.9"
     restart: always
     container_name: single-zookeeper
     ports:
@@ -13,7 +13,7 @@ services:
       JVMFLAGS: "-Xms1024m -Xmx1024m -XX:+UseG1GC -XX:MaxGCPauseMillis=50 -XX:+AlwaysPreTouch -Djute.maxbuffer=4194304 -Dzookeeper.serverCnxnFactory=org.apache.zookeeper.server.NettyServerCnxnFactory"
 
   zoonavigator:
-    image: 'elkozmon/zoonavigator:latest'
+    image: "elkozmon/zoonavigator:latest"
     restart: always
     ports:
       - 9000:9000
