--- a/registry/docker-compose.yml
+++ b/registry/docker-compose.yml
@@ -1,7 +1,7 @@
-version: '2'
+version: "2"
 
 services:
   registry:
-    image: 'registry:2'
+    image: "registry:2"
     restart: always
     network_mode: host
