--- a/zookeeper-cluster/docker-compose.yml
+++ b/zookeeper-cluster/docker-compose.yml
@@ -1,32 +1,32 @@
-version: '2'
+version: "2"
 
 services:
   zookeeper1:
-    image: 'bitnami/zookeeper:3.7'
+    image: "bitnami/zookeeper:3.7"
     ports:
-      - '2181'
-      - '2888'
-      - '3888'
+      - "2181"
+      - "2888"
+      - "3888"
     environment:
       - ALLOW_ANONYMOUS_LOGIN=yes
       - ZOO_SERVER_ID=1
       - ZOO_SERVERS=0.0.0.0:2888:3888,zookeeper2:2888:3888,zookeeper3:2888:3888
   zookeeper2:
-    image: 'bitnami/zookeeper:3.7'
+    image: "bitnami/zookeeper:3.7"
     ports:
-      - '2181'
-      - '2888'
-      - '3888'
+      - "2181"
+      - "2888"
+      - "3888"
     environment:
       - ALLOW_ANONYMOUS_LOGIN=yes
       - ZOO_SERVER_ID=2
       - ZOO_SERVERS=zookeeper1:2888:3888,0.0.0.0:2888:3888,zookeeper3:2888:3888
   zookeeper3:
-    image: 'bitnami/zookeeper:3.7'
+    image: "bitnami/zookeeper:3.7"
     ports:
-      - '2181'
-      - '2888'
-      - '3888'
+      - "2181"
+      - "2888"
+      - "3888"
     environment:
       - ALLOW_ANONYMOUS_LOGIN=yes
       - ZOO_SERVER_ID=3
