--- a/zookeeper/docker-compose.yml
+++ b/zookeeper/docker-compose.yml
@@ -1,8 +1,8 @@
-version: '2'
+version: "2"
 
 services:
   zookeeper:
-    image: 'zookeeper:3.5.9'
+    image: "zookeeper:3.5.9"
     restart: always
     ports:
       - 2181:2181
