use unless-stopped mode

--- a/zookeeper/docker-compose.yml
+++ b/zookeeper/docker-compose.yml
@@ -3,7 +3,7 @@ version: "2"
 services:
   zookeeper:
     image: "zookeeper:3.5.9"
-    restart: always
+    restart: unless-stopped
     ports:
       - 2181:2181
     container_name: single-zookeeper
@@ -15,6 +15,7 @@ services:
     volumes:
       - data:/data
       - datalog:/datalog
+
 volumes:
   data:
   datalog:
