--- a/zookeeper/docker-compose.yml
+++ b/zookeeper/docker-compose.yml
@@ -2,7 +2,7 @@ version: "2"
 
 services:
   zookeeper:
-    image: "zookeeper:3.5.9"
+    image: zookeeper:3.5.9
     restart: unless-stopped
     ports:
       - 2181:2181
