--- a/kafka-4/docker-compose.yml
+++ b/kafka-4/docker-compose.yml
@@ -6,7 +6,7 @@ networks:
 
 services:
   kafka:
-    image: "wurstmeister/kafka:2.13-2.7.0"
+    image: "wurstmeister/kafka:2.11-1.1.1"
     depends_on:
       - zookeeper
     restart: unless-stopped
@@ -29,3 +29,16 @@ services:
       - kafka-network
     ports:
       - "2181:2181"
+
+  kafkamanager:
+    image: kafkamanager/kafka-manager
+    depends_on:
+      - zookeeper
+      - kafka
+    restart: unless-stopped
+    networks:
+      - kafka-network
+    ports:
+      - "9000:9000"
+    environment:
+      - ZK_HOSTS=zookeeper:2181
