--- a/neo4j-1/docker-compose.yml
+++ b/neo4j-1/docker-compose.yml
@@ -1,20 +1,21 @@
 version: "2"
 
-networks:
-  neo4j-network:
-    driver: bridge
+# networks:
+#   neo4j-network:
+#     driver: bridge
 
 services:
   neo4j:
-    image: docker.io/neo4j:4.3
+    image: neo4j:4.3
     environment:
       - NEO4J_AUTH=none
       # - NEO4J_AUTH=neo4j/your_password
       - NEO4J_dbms_memory_pagecache_size=8G
       - NEO4J_dbms.memory.heap.initial_size=1G
       - NEO4J_dbms_memory_heap_max__size=8G
-    networks:
-      - neo4j-network
+    # networks:
+    #   - neo4j-network
+    network_mode: bridge
     ports:
       - "7474:7474"
       - "7687:7687"
