--- a/mysql-1/docker-compose.yml
+++ b/mysql-1/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "2.4"
 
 services:
-  mysqld:
+  mysql:
     image: mysql
     command: --default-authentication-plugin=mysql_native_password
     restart: always
