--- a/neo4j-1/docker-compose.yml
+++ b/neo4j-1/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "2"
+version: '2'
 
 # networks:
 #   neo4j-network:
@@ -17,11 +17,11 @@ services:
     #   - neo4j-network
     network_mode: bridge
     ports:
-      - "7474:7474"
-      - "7687:7687"
+      - '7474:7474'
+      - '7687:7687'
     volumes:
-      - "neo4j_data:/data"
-      - "neo4j_logs/logs"
+      - 'neo4j_data:/data'
+      - 'neo4j_logs:/logs'
 
 volumes:
   neo4j_data:
