--- a/zookeeper/docker-compose.yml
+++ b/zookeeper/docker-compose.yml
@@ -9,7 +9,13 @@ services:
       - ZOO_MAX_CLIENT_CNXNS=120
       - ZOO_AUTOPURGE_PURGEINTERVAL=24
       - ZOO_ADMINSERVER_ENABLED=false
-      - JVMFLAGS=-Xms1024m -Xmx1024m -XX:+UseG1GC -XX:MaxGCPauseMillis=50 -XX:+AlwaysPreTouch -Djute.maxbuffer=4194304 -Dzookeeper.serverCnxnFactory=org.apache.zookeeper.server.NettyServerCnxnFactory
+      - >
+        JVMFLAGS=-Xms1024m -Xmx1024m
+        -XX:+UseG1GC
+        -XX:MaxGCPauseMillis=50
+        -XX:+AlwaysPreTouch
+        -Djute.maxbuffer=4194304
+        -Dzookeeper.serverCnxnFactory=org.apache.zookeeper.server.NettyServerCnxnFactory
     volumes:
       - data:/data
       - datalog:/datalog
