--- a/pulsar/standalone/docker-compose.yml
+++ b/pulsar/standalone/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   standalone:
-    image: apachepulsar/pulsar
+    image: apachepulsar/pulsar:2.8.1
     expose:
       - 8080
       - 6650
@@ -11,7 +11,7 @@ services:
       "bin/apply-config-from-env.py conf/standalone.conf
       && exec bin/pulsar standalone --advertised-address standalone"
   dashboard:
-    image: apachepulsar/pulsar-dashboard
+    image: apachepulsar/pulsar-dashboard:2.8.1
     depends_on:
       - standalone
     ports:
