update zookeeper cluster

--- a/zookeeper-cluster/1/docker-compose.yml
+++ b/zookeeper-cluster/1/docker-compose.yml
@@ -1,8 +1,7 @@
 services:
-  zoo1:
+  zookeeper1:
     image: zookeeper:latest
     restart: always
-    hostname: zoo1
     ports:
       - 2181:2181
     environment:
@@ -17,12 +16,11 @@ services:
         -Djute.maxbuffer=4194304
         -Dzookeeper.serverCnxnFactory=org.apache.zookeeper.server.NettyServerCnxnFactory
       - ZOO_MY_ID=1
-      - ZOO_SERVERS=server.1=zoo1:2888:3888;2181 server.2=zoo2:2888:3888;2181 server.3=zoo3:2888:3888;2181
+      - ZOO_SERVERS=server.1=zookeeper1:2888:3888;2181 server.2=zookeeper2:2888:3888;2181 server.3=zookeeper3:2888:3888;2181
 
-  zoo2:
+  zookeeper2:
     image: zookeeper
     restart: always
-    hostname: zoo2
     ports:
       - 2182:2181
     environment:
@@ -36,13 +34,12 @@ services:
         -XX:+AlwaysPreTouch
         -Djute.maxbuffer=4194304
         -Dzookeeper.serverCnxnFactory=org.apache.zookeeper.server.NettyServerCnxnFactory
-      ZOO_MY_ID: 2
-      ZOO_SERVERS: server.1=zoo1:2888:3888;2181 server.2=zoo2:2888:3888;2181 server.3=zoo3:2888:3888;2181
+      - ZOO_MY_ID=2
+      - ZOO_SERVERS=server.1=zookeeper1:2888:3888;2181 server.2=zookeeper2:2888:3888;2181 server.3=zookeeper3:2888:3888;2181
 
-  zoo3:
+  zookeeper3:
     image: zookeeper
     restart: always
-    hostname: zoo3
     ports:
       - 2183:2181
     environment:
@@ -56,5 +53,5 @@ services:
         -XX:+AlwaysPreTouch
         -Djute.maxbuffer=4194304
         -Dzookeeper.serverCnxnFactory=org.apache.zookeeper.server.NettyServerCnxnFactory
-      ZOO_MY_ID: 3
-      ZOO_SERVERS: server.1=zoo1:2888:3888;2181 server.2=zoo2:2888:3888;2181 server.3=zoo3:2888:3888;2181
+      - ZOO_MY_ID=3
+      - ZOO_SERVERS=server.1=zookeeper1:2888:3888;2181 server.2=zookeeper2:2888:3888;2181 server.3=zookeeper3:2888:3888;2181
