--- a/influxdb-v2/docker-compose.yml
+++ b/influxdb-v2/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "2.4"
-
 services:
   influxdb:
     image: influxdb:2.0
@@ -14,3 +12,4 @@ services:
 
 volumes:
   influxdb-v2:
+    driver: local
