--- a/influxdb-v1/docker-compose.yml
+++ b/influxdb-v1/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "2.4"
-
 services:
   influxdb:
     image: influxdb:1.8
@@ -14,3 +12,4 @@ services:
 
 volumes:
   influxdb-v1:
+    driver: local
