--- a/zookeeper/1/docker-compose.yml
+++ b/zookeeper/1/docker-compose.yml
@@ -1,21 +1,28 @@
 services:
   zookeeper:
-    image: zookeeper:3.5
-    container_name: single-zookeeper
+    image: zookeeper:latest
+    container_name: standalone-zookeeper
     restart: unless-stopped
     # cpuset: 0,1
     ports:
       - 2181:2181
     environment:
+      - ZOO_TICK_TIME=2000
+      - ZOO_INIT_LIMIT=10
+      - ZOO_SYNC_LIMIT=2
       - ZOO_MAX_CLIENT_CNXNS=120
-      - ZOO_AUTOPURGE_PURGEINTERVAL=24
+      - ZOO_STANDALONE_ENABLED=true
       - ZOO_ADMINSERVER_ENABLED=false
+      - ZOO_AUTOPURGE_PURGEINTERVAL=1
+      - ZOO_AUTOPURGE_SNAPRETAINCOUNT=3
+      - ZOO_4LW_COMMANDS_WHITELIST=srvr
       - >
         JVMFLAGS=-Xms1024m -Xmx1024m
         -XX:+UseG1GC
         -XX:MaxGCPauseMillis=50
         -XX:+AlwaysPreTouch
         -Djute.maxbuffer=4194304
+        -Dzookeeper.maxCnxns=120
         -Dzookeeper.serverCnxnFactory=org.apache.zookeeper.server.NettyServerCnxnFactory
     volumes:
       - data:/data
