rollback zk to 3.6

--- a/zookeeper/1/docker-compose.yml
+++ b/zookeeper/1/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   zookeeper:
-    image: zookeeper:latest
+    image: zookeeper:3.6
     container_name: standalone-zookeeper
     restart: unless-stopped
     # cpuset: 0,1
