refine vscode workspace setting

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,7 @@
     "[markdown]": {
         "editor.defaultFormatter": "esbenp.prettier-vscode"
     },
-    "[yaml]": {
+    "[dockercompose]": {
         "editor.defaultFormatter": "esbenp.prettier-vscode"
     }
 }
