--- a/zookeeper/2/docker-compose.yml
+++ b/zookeeper/2/docker-compose.yml
@@ -1,14 +1,22 @@
+version: "2"
+
 services:
   zookeeper:
-    image: "bitnami/zookeeper:latest"
+    image: docker.io/bitnami/zookeeper:3.8
     container_name: single-zookeeper
     restart: unless-stopped
     ports:
       - 2181:2181
+    volumes:
+      - zookeeper_data:/bitnami/zookeeper
     environment:
+      - TZ=Asia/Shanghai
+      - MALLOC_ARENA_MAX=2
       - ALLOW_ANONYMOUS_LOGIN=yes
       - ZOO_MAX_CLIENT_CNXNS=120
+      - ZOO_ADMINSERVER_ENABLED=false
       - ZOO_AUTOPURGE_PURGEINTERVAL=24
+      - ZOO_AUTOPURGE_SNAPRETAINCOUNT=3
       - >
         JVMFLAGS=-Xms1024m -Xmx1024m
         -XX:+UseG1GC
@@ -17,3 +25,7 @@ services:
         -Djute.maxbuffer=4194304
         -Dzookeeper.admin.enableServer=false
         -Dzookeeper.serverCnxnFactory=org.apache.zookeeper.server.NettyServerCnxnFactory
+
+volumes:
+  zookeeper_data:
+    driver: local
