--- a/zookeeper-cluster/2/docker-compose.yml
+++ b/zookeeper-cluster/2/docker-compose.yml
@@ -1,35 +1,34 @@
+version: "2"
+
 services:
   zookeeper1:
-    image: "bitnami/zookeeper:3.7"
-    cpuset: 0,1
+    image: docker.io/bitnami/zookeeper:3.5
     ports:
-      - "2181"
-      - "2888"
-      - "3888"
+      - "12181:2181"
+      - "12888:2888"
+      - "13888:3888"
     environment:
       - ALLOW_ANONYMOUS_LOGIN=yes
       - ZOO_SERVER_ID=1
       - ZOO_SERVERS=0.0.0.0:2888:3888,zookeeper2:2888:3888,zookeeper3:2888:3888
 
   zookeeper2:
-    image: "bitnami/zookeeper:3.7"
-    cpuset: 2,3
+    image: docker.io/bitnami/zookeeper:3.5
     ports:
-      - "2181"
-      - "2888"
-      - "3888"
+      - "22181:2181"
+      - "22888:2888"
+      - "23888:3888"
     environment:
       - ALLOW_ANONYMOUS_LOGIN=yes
       - ZOO_SERVER_ID=2
       - ZOO_SERVERS=zookeeper1:2888:3888,0.0.0.0:2888:3888,zookeeper3:2888:3888
 
   zookeeper3:
-    image: "bitnami/zookeeper:3.7"
-    cpuset: 4,5
+    image: docker.io/bitnami/zookeeper:3.5
     ports:
-      - "2181"
-      - "2888"
-      - "3888"
+      - "32181:2181"
+      - "32888:2888"
+      - "33888:3888"
     environment:
       - ALLOW_ANONYMOUS_LOGIN=yes
       - ZOO_SERVER_ID=3
