--- a/zookeeper/1/docker-compose.yml
+++ b/zookeeper/1/docker-compose.yml
@@ -1,9 +1,10 @@
+version: "2"
+
 services:
   zookeeper:
-    image: zookeeper:3.6
+    image: zookeeper:3.5
     container_name: standalone-zookeeper
     restart: unless-stopped
-    # cpuset: 0,1
     ports:
       - 2181:2181
     environment:
