--- a/neo4j/1/docker-compose.yml
+++ b/neo4j/1/docker-compose.yml
@@ -1,18 +1,15 @@
-# networks:
-#   neo4j-network:
-#     driver: bridge
-
 services:
   neo4j:
-    image: neo4j:4.4.5
+    image: docker.io/neo4j:4.4.7
     environment:
+      - TZ=Asia/Shanghai
+      - MALLOC_ARENA_MAX=2
       # - NEO4J_AUTH=none
-      - NEO4J_AUTH=neo4j/neo4j
-      - NEO4J_dbms_memory_pagecache_size=8G
-      - NEO4J_dbms.memory.heap.initial_size=1G
-      - NEO4J_dbms_memory_heap_max__size=8G
-    # networks:
-    #   - neo4j-network
+      - NEO4J_AUTH=neo4j/learnneo4j
+      - NEO4J_dbms_memory_pagecache_size=31G
+      - NEO4J_dbms.memory.heap.initial_size=8G
+      - NEO4J_dbms_memory_heap_max__size=31G
+      - NEO4J_dbms_jvm_additional=-XX:+AlwaysPreTouch
     network_mode: bridge
     ports:
       - "7474:7474"
