--- a/zookeeper-cluster/1/docker-compose.yml
+++ b/zookeeper-cluster/1/docker-compose.yml
@@ -1,7 +1,9 @@
 services:
   zookeeper1:
-    image: zookeeper:3.6
-    restart: always
+    image: zookeeper:${TAG:-3.6}
+    hostname: zookeeper1
+    networks:
+      - docker1
     ports:
       - 2181:2181
     environment:
@@ -19,8 +21,10 @@ services:
       - ZOO_SERVERS=server.1=zookeeper1:2888:3888;2181 server.2=zookeeper2:2888:3888;2181 server.3=zookeeper3:2888:3888;2181
 
   zookeeper2:
-    image: zookeeper:3.6
-    restart: always
+    image: zookeeper:${TAG:-3.6}
+    hostname: zookeeper2
+    networks:
+      - docker1
     ports:
       - 2182:2181
     environment:
@@ -38,8 +42,10 @@ services:
       - ZOO_SERVERS=server.1=zookeeper1:2888:3888;2181 server.2=zookeeper2:2888:3888;2181 server.3=zookeeper3:2888:3888;2181
 
   zookeeper3:
-    image: zookeeper:3.6
-    restart: always
+    image: zookeeper:${TAG:-3.6}
+    hostname: zookeeper3
+    networks:
+      - docker1
     ports:
       - 2183:2181
     environment:
@@ -55,3 +61,7 @@ services:
         -Dzookeeper.serverCnxnFactory=org.apache.zookeeper.server.NettyServerCnxnFactory
       - ZOO_MY_ID=3
       - ZOO_SERVERS=server.1=zookeeper1:2888:3888;2181 server.2=zookeeper2:2888:3888;2181 server.3=zookeeper3:2888:3888;2181
+
+networks:
+  docker1:
+    external: true
