--- a/neo4j/1/docker-compose.yml
+++ b/neo4j/1/docker-compose.yml
@@ -1,22 +1,24 @@
+version: "2"
+
 services:
   neo4j:
-    image: docker.io/neo4j:4.4.7
+    image: docker.io/neo4j:${TAG-latest}
     environment:
       - TZ=Asia/Shanghai
       - MALLOC_ARENA_MAX=2
-      # - NEO4J_AUTH=none
-      - NEO4J_AUTH=neo4j/learnneo4j
-      - NEO4J_dbms_memory_pagecache_size=31G
-      - NEO4J_dbms.memory.heap.initial_size=8G
-      - NEO4J_dbms_memory_heap_max__size=31G
+      - NEO4J_AUTH=none
+      # - NEO4J_AUTH=neo4j/learnneo4j
+      # - NEO4J_dbms_memory_pagecache_size=31G
+      # - NEO4J_dbms.memory.heap.initial_size=8G
+      # - NEO4J_dbms_memory_heap_max__size=31G
       - NEO4J_dbms_jvm_additional=-XX:+AlwaysPreTouch
     network_mode: bridge
     ports:
-      - "7474:7474"
-      - "7687:7687"
+      - 7474:7474
+      - 7687:7687
     volumes:
-      - "neo4j_data:/data"
-      - "neo4j_logs:/logs"
+      - neo4j_data:/data
+      - neo4j_logs:/logs
 
 volumes:
   neo4j_data:
