--- a/flink/2/docker-compose.yml
+++ b/flink/2/docker-compose.yml
@@ -1,27 +1,23 @@
+version: "2.2"
 services:
-  flink-jobmanager-01:
-    image: flink:1.14.0-scala_2.12-java8
-    container_name: flink-jobmanager-01
-    hostname: flink-jobmanager-01
-    expose:
-      - "6123"
+  jobmanager:
+    image: flink:1.15.0-scala_2.12
     ports:
       - "8081:8081"
     command: jobmanager
     environment:
-      - JOB_MANAGER_RPC_ADDRESS=flink-jobmanager-01
+      - |
+        FLINK_PROPERTIES=
+        jobmanager.rpc.address: jobmanager
 
-  flink-taskmanager-01:
-    image: flink:1.14.0-scala_2.12-java8
-    container_name: flink-taskmanager-01
-    hostname: flink-taskmanager-01
-    expose:
-      - "6121"
-      - "6122"
+  taskmanager:
+    image: flink:1.15.0-scala_2.12
     depends_on:
-      - flink-jobmanager-01
+      - jobmanager
     command: taskmanager
-    links:
-      - "flink-jobmanager-01:jobmanager"
+    scale: 1
     environment:
-      - JOB_MANAGER_RPC_ADDRESS=flink-jobmanager-01
+      - |
+        FLINK_PROPERTIES=
+        jobmanager.rpc.address: jobmanager
+        taskmanager.numberOfTaskSlots: 2
