--- a/flink/2/docker-compose.yml
+++ b/flink/2/docker-compose.yml
@@ -1,7 +1,8 @@
 version: "2.2"
+
 services:
   jobmanager:
-    image: flink:1.15.0-scala_2.12
+    image: flink:${TAG:-1.15.0-scala_2.12}
     ports:
       - "8081:8081"
     command: jobmanager
@@ -11,7 +12,7 @@ services:
         jobmanager.rpc.address: jobmanager
 
   taskmanager:
-    image: flink:1.15.0-scala_2.12
+    image: flink:${TAG:-1.15.0-scala_2.12}
     depends_on:
       - jobmanager
     command: taskmanager
