--- a/consul/docker-compose.yml
+++ b/consul/docker-compose.yml
@@ -1,17 +1,19 @@
-version: '2'
+version: "2"
 
 services:
   consul:
     image: docker.io/bitnami/consul:1
+    network_mode: bridge
+    ports:
+      - 8300:8300
+      - 8301:8301
+      - 8301:8301/udp
+      - 8500:8500
+      - 8600:8600
+      - 8600:8600/udp
     volumes:
       - consul_data:/bitnami/consul
-    ports:
-      - '8300:8300'
-      - '8301:8301'
-      - '8301:8301/udp'
-      - '8500:8500'
-      - '8600:8600'
-      - '8600:8600/udp'
+
 volumes:
   consul_data:
     driver: local
