--- a/redis/1/docker-compose.yml
+++ b/redis/1/docker-compose.yml
@@ -1,10 +1,15 @@
-version: "2.4"
+version: "2"
 
 services:
   redis-server:
     image: redis:6.2
     container_name: redis-server
-    restart: unless-stopped
+    # restart: unless-stopped
     network_mode: bridge
     ports:
-      - "6379:6379"
+      - 6379:6379
+    environment:
+      - TZ=Asia/Shanghai
+      - MALLOC_ARENA_MAX=2
+    sysctls:
+      net.core.somaxconn: "511"
