--- a/memgraph-platform/docker-compose.yml
+++ b/memgraph-platform/docker-compose.yml
@@ -4,8 +4,7 @@ services:
   memgraph-platform:
     image: memgraph/memgraph-platform:latest
     hostname: memgraph-platform
-    networks:
-      - docker1
+    network_mode: bridge
     ports:
       - 7687:7687
       - 7444:7444
@@ -24,7 +23,3 @@ volumes:
   mg_lib:
   mg_log:
   mg_etc:
-
-networks:
-  docker1:
-    external: true
