--- a/kafka/4/docker-compose.yml
+++ b/kafka/4/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     image: "wurstmeister/kafka:2.11-1.1.1"
     depends_on:
       - zookeeper
-    restart: unless-stopped
+    # restart: unless-stopped
     networks:
       - kafka-network
     ports:
@@ -26,7 +26,7 @@ services:
 
   zookeeper:
     image: "zookeeper:3.5"
-    restart: unless-stopped
+    # restart: unless-stopped
     networks:
       - kafka-network
     ports:
@@ -37,7 +37,7 @@ services:
     depends_on:
       - zookeeper
       - kafka
-    restart: unless-stopped
+    # restart: unless-stopped
     networks:
       - kafka-network
     ports:
