--- a/mysql/3/docker-compose.yml
+++ b/mysql/3/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   mysql:
     image: mysql:5.7
     command: --default-authentication-plugin=mysql_native_password
-    restart: unless-stopped
+    # restart: unless-stopped
     network_mode: bridge
     ports:
       - 3306:3306
