--- a/zookeeper/1/docker-compose.yml
+++ b/zookeeper/1/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   zookeeper:
     image: zookeeper:3.5
     container_name: standalone-zookeeper
-    restart: unless-stopped
+    # restart: unless-stopped
     ports:
       - 2181:2181
     environment:
