--- a/zookeeper/2/docker-compose.yml
+++ b/zookeeper/2/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   zookeeper:
     image: docker.io/bitnami/zookeeper:3.8
     container_name: single-zookeeper
-    restart: unless-stopped
+    # restart: unless-stopped
     ports:
       - 2181:2181
     volumes:
