--- a/mysql/1/docker-compose.yml
+++ b/mysql/1/docker-compose.yml
@@ -1,17 +1,19 @@
+version: "2"
+
 services:
   mysql:
-    image: mysql:5.7
+    image: docker.io/mysql:5.7
     command:
       [
         "--default-authentication-plugin=mysql_native_password",
-        "--innodb_buffer_pool_size=16G",
+        "--innodb_buffer_pool_size=8G",
         "--innodb_log_file_size=512M",
         "--lower_case_table_names=1",
         "--max_connections=1001",
         "--character-set-server=utf8mb4",
         "--collation-server=utf8mb4_unicode_ci",
       ]
-    restart: always
+    # restart: always
     network_mode: bridge
     ports:
       - 3306:3306
