--- a/mysql/1/docker-compose.yml
+++ b/mysql/1/docker-compose.yml
@@ -18,6 +18,7 @@ services:
     ports:
       - 3306:3306
     environment:
+      - TZ=Asia/Shanghai
       - MYSQL_ROOT_PASSWORD=example
     volumes:
       - mysql:/var/lib/mysql
