--- a/postgresql/1/docker-compose.yml
+++ b/postgresql/1/docker-compose.yml
@@ -12,6 +12,8 @@ services:
       - POSTGRES_PASSWORD=password123
     volumes:
       - postgres:/var/lib/postgres
+    command: postgres -c 'shared_buffers=4GB' -c 'max_connections=200'
+
 
 volumes:
   postgres:
