--- a/.editorconfig
+++ b/.editorconfig
@@ -8,5 +8,11 @@ charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
 
-[*.md]
+[*.{html,md}]
 trim_trailing_whitespace = false
+
+[Makefile]
+indent_style = tab
+
+[{.gitattributes,.gitignore,.gitmodules}]
+indent_style = tab
