--- a/neo4j/1/docker-compose.yml
+++ b/neo4j/1/docker-compose.yml
@@ -2,7 +2,7 @@ version: "2"
 
 services:
   neo4j:
-    image: docker.io/neo4j:${TAG-latest}
+    image: docker.io/neo4j:${TAG-4.4.8}
     environment:
       - TZ=Asia/Shanghai
       - MALLOC_ARENA_MAX=2
