--- a/neo4j/2/docker-compose.yml
+++ b/neo4j/2/docker-compose.yml
@@ -2,7 +2,7 @@ version: "2"
 
 services:
   neo4j:
-    image: bitnami/neo4j:latest
+    image: bitnami/neo4j:4
     environment:
       - NEO4J_PASSWORD=neo4j
       # - NEO4J_HOST=
