--- a/activemq/docker-compose.yml
+++ b/activemq/docker-compose.yml
@@ -1,9 +1,9 @@
-version: '3.9'
+version: "3"
 
 services:
   activemq:
-    image: symptoma/activemq:latest
-    container_name: 'activemq'
+    build: .
+    container_name: "activemq"
     ports:
       - 61616:61616
     volumes:
