--- a/activemq/docker-compose.yml
+++ b/activemq/docker-compose.yml
@@ -3,6 +3,7 @@ version: "3"
 services:
   activemq:
     build: .
+    image: "aaronchenwei/activemq:5.17.2"
     container_name: "activemq"
     ports:
       - 61616:61616
