--- a/jupyter-notebook/docker-compose.yml
+++ b/jupyter-notebook/docker-compose.yml
@@ -6,4 +6,6 @@ services:
     image: jupyter/pyspark-notebook:latest
     ports:
       - 8888:8888
-      - 4040:4040
+      - "4040-4080:4040-4080"
+    volumes:
+      - ./notebooks:/home/jovyan/work/notebooks/
