--- a/jupyter-notebook/5/docker-compose.yml
+++ b/jupyter-notebook/5/docker-compose.yml
@@ -5,8 +5,7 @@ services:
     image: jupyter/scipy-notebook:python-3.10
     ports:
       - 8888:8888
-      - "4040-4080:4040-4080"
     volumes:
-      - ./volumes/work:/home/jovyan/work
-      - ./volumes:/home/jovyan/data
-    command: start.sh jupyter lab --LabApp.token=''
+      - ./notebooks:/home/jovyan/
+    environment:
+      - JUPYTER_TOKEN=easytoken
