--- a/jupyter-notebook/5/docker-compose.yml
+++ b/jupyter-notebook/5/docker-compose.yml
@@ -6,6 +6,6 @@ services:
     ports:
       - 8888:8888
     volumes:
-      - ./notebooks:/home/jovyan/
+      - ./volumes/notebooks:/home/jovyan/notebooks
     environment:
       - JUPYTER_TOKEN=easytoken
