--- a/jupyter-notebook/5/docker-compose.yml
+++ b/jupyter-notebook/5/docker-compose.yml
@@ -4,8 +4,12 @@ services:
   scipy-jupyter:
     image: jupyter/scipy-notebook:python-3.10
     hostname: scipy-notebook
+    user: root
     restart: unless-stopped
     ports:
       - 8888:8888
     environment:
       - JUPYTER_TOKEN=easytoken
+      - GRANT_SUDO=yes
+    volumes:
+      - ./volumes/work:/home/jovyan/work
