--- a/zookeeper/1/compose.yaml
+++ b/zookeeper/1/compose.yaml
@@ -1,25 +1,24 @@
-version: '2'
+version: "2"
 
 services:
   zookeeper:
-    image: docker.io/bitnami/zookeeper:3.8
-    container_name: single-zookeeper
+    image: zookeeper:${TAG-3.7}
+    container_name: zookeeper
+    hostname: zookeeper
     # restart: unless-stopped
     network_mode: bridge
     ports:
       - 2181:2181
-    volumes:
-      - zookeeper_data:/bitnami/zookeeper
     environment:
-      - TZ=Asia/Shanghai
-      - MALLOC_ARENA_MAX=2
-      #
-      - ALLOW_ANONYMOUS_LOGIN=yes
+      - ZOO_TICK_TIME=2000
+      - ZOO_INIT_LIMIT=10
+      - ZOO_SYNC_LIMIT=2
       - ZOO_MAX_CLIENT_CNXNS=120
+      - ZOO_STANDALONE_ENABLED=true
       - ZOO_ADMINSERVER_ENABLED=false
-      - ZOO_AUTOPURGE_PURGEINTERVAL=24
+      - ZOO_AUTOPURGE_PURGEINTERVAL=1
       - ZOO_AUTOPURGE_SNAPRETAINCOUNT=3
-      - ZOO_ENABLE_ADMIN_SERVER=false
+      - ZOO_4LW_COMMANDS_WHITELIST=srvr
       - >
         JVMFLAGS=-Xms1024m -Xmx1024m
         -XX:+UseG1GC
@@ -27,7 +26,15 @@ services:
         -XX:+AlwaysPreTouch
         -Djute.maxbuffer=4194304
         -Dzookeeper.serverCnxnFactory=org.apache.zookeeper.server.NettyServerCnxnFactory
+    volumes:
+      - data:/data
+      - datalog:/datalog
+      - log:/logs
 
 volumes:
-  zookeeper_data:
+  data:
+    driver: local
+  datalog:
+    driver: local
+  log:
     driver: local
