--- a/mongodb/multiple-shards/compose.yaml
+++ b/mongodb/multiple-shards/compose.yaml
@@ -1,4 +1,4 @@
-version: '2'
+version: "2"
 
 services:
   mongodb-sharded:
@@ -34,7 +34,7 @@ services:
       - MONGODB_REPLICA_SET_KEY=replicasetkey123
       - MONGODB_REPLICA_SET_NAME=shard0
     volumes:
-      - 'shard0_data:/bitnami'
+      - "shard0_data:/bitnami"
 
   mongodb-shard0-secondary:
     image: docker.io/bitnami/mongodb-sharded:${TAG:-latest}
@@ -49,7 +49,7 @@ services:
       - MONGODB_SHARDING_MODE=shardsvr
       - MONGODB_REPLICA_SET_NAME=shard0
     volumes:
-      - 'shard0_sec_data:/bitnami'
+      - "shard0_sec_data:/bitnami"
 
   mongodb-shard1-primary:
     image: docker.io/bitnami/mongodb-sharded:${TAG:-latest}
@@ -62,7 +62,7 @@ services:
       - MONGODB_REPLICA_SET_KEY=replicasetkey123
       - MONGODB_REPLICA_SET_NAME=shard1
     volumes:
-      - 'shard1_data:/bitnami'
+      - "shard1_data:/bitnami"
 
   mongodb-shard1-secondary:
     image: docker.io/bitnami/mongodb-sharded:${TAG:-latest}
@@ -77,7 +77,7 @@ services:
       - MONGODB_SHARDING_MODE=shardsvr
       - MONGODB_REPLICA_SET_NAME=shard1
     volumes:
-      - 'shard1_sec_data:/bitnami'
+      - "shard1_sec_data:/bitnami"
 
   mongodb-shard2-primary:
     image: docker.io/bitnami/mongodb-sharded:${TAG:-latest}
@@ -90,7 +90,7 @@ services:
       - MONGODB_REPLICA_SET_KEY=replicasetkey123
       - MONGODB_REPLICA_SET_NAME=shard2
     volumes:
-      - 'shard2_data:/bitnami'
+      - "shard2_data:/bitnami"
 
   mongodb-shard2-secondary:
     image: docker.io/bitnami/mongodb-sharded:${TAG:-latest}
@@ -105,7 +105,7 @@ services:
       - MONGODB_SHARDING_MODE=shardsvr
       - MONGODB_REPLICA_SET_NAME=shard2
     volumes:
-      - 'shard2_sec_data:/bitnami'
+      - "shard2_sec_data:/bitnami"
 
   mongodb-cfg-primary:
     image: docker.io/bitnami/mongodb-sharded:${TAG:-latest}
@@ -117,7 +117,7 @@ services:
       - MONGODB_REPLICA_SET_KEY=replicasetkey123
       - MONGODB_REPLICA_SET_NAME=cfgreplicaset
     volumes:
-      - 'cfg_data:/bitnami'
+      - "cfg_data:/bitnami"
 
   mongodb-cfg-secondary:
     image: docker.io/bitnami/mongodb-sharded:${TAG:-latest}
@@ -132,7 +132,7 @@ services:
       - MONGODB_REPLICA_SET_NAME=cfgreplicaset
       - MONGODB_SHARDING_MODE=configsvr
     volumes:
-      - 'cfg_sec_data:/bitnami'
+      - "cfg_sec_data:/bitnami"
 
 volumes:
   shard0_data:
