--- a/jupyter-notebook/1/compose.yaml
+++ b/jupyter-notebook/1/compose.yaml
@@ -3,11 +3,19 @@ version: "3"
 services:
   # jupyterlab with pyspark
   jupyter:
-    image: jupyter/pyspark-notebook:latest
+    image: jupyter/pyspark-notebook:${TAG:-python-3.10}
+    container_name: jupyter
     host: jupyter
+    network_mode: bridge
     ports:
       - 8888:8888
       - "4040-4080:4040-4080"
     volumes:
-      - ./work:/home/jovyan/work
-      - ./data:/home/jovyan/data
+      - work:/home/jovyan/work
+      - data:/home/jovyan/data
+
+volumes:
+  work:
+    driver: local
+  data:
+    driver: local
