--- a/jupyter-notebook/6/compose.yaml
+++ b/jupyter-notebook/6/compose.yaml
@@ -1,10 +1,11 @@
 version: "3"
 
 services:
-  my-scipy-jupyter:
+  scipy-notebook:
     build:
       dockerfile: Dockerfile
     image: aaronchenwei/scipy-notebook:latest
+    container_name: scipy-notebook
     hostname: scipy-notebook
     user: root
     restart: unless-stopped
@@ -14,4 +15,8 @@ services:
       - JUPYTER_TOKEN=easytoken
       - GRANT_SUDO=yes
     volumes:
-      - ./volumes/work:/home/jovyan/work
+      - work:/home/jovyan/work
+
+volumes:
+  work:
+    driver: local
